add get swaps route+pagination,refactor strip null
